package depotsrv;

message PackageIdent {
  optional string origin = 1;
  optional string name = 2;
  optional string version = 3;
  optional string release = 4;
}

message Package {
  optional PackageIdent ident = 1;
  optional string checksum = 2;
  optional string manifest = 3;
  repeated PackageIdent deps = 4;
  repeated PackageIdent tdeps = 5;
  repeated uint32 exposes = 6 [packed=true];
  optional string config = 7;
  optional string target = 8;
}

message View {
  optional string name = 1;
}

message OriginKeyIdent {
  optional string origin = 1;
  optional string revision = 2;
  optional string location = 3;
}

message OriginChannelIdent {
  optional string name = 2;
}
